# mudlarking-server

./: Cargo.toml  Dockerfile  corpus.json
.github/workflows/: deploy.yml  docker.yml
src/: corpus.json  font.rs  main.rs  shore.rs  text_table.rs
src/text_table/: corpus.rs  deterministic_weighted_index.rs  weighted_choice.rs
