[package]
name = "mudlarking-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
noise = { version = "0.9.0", features = ["image", "images", "std"] }
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
ttf-parser = "0.24.0"
uuid = { version = "1.10.0", features = ["fast-rng", "serde", "v4"] }
